# test-project

./: .dockerignore  .env.example  .gitignore  CODEX_RULES.md  Dockerfile  README.md  app.py  build.spec  build_exe.py  cloudbuild.yaml  config.py  firestore.rules  generate_sample_data.py  index.html  inheritance_report_sample.html  launcher.py  leasehold_valuation.py  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup-shortcut.bat  setup_font.py  start-app.bat  start.bat  start.command  tailwind.config.ts  tsconfig.json  vitest.config.ts  借地権評価額計算書.xlsx  月次報告書ツール起動.bat  月次報告書ツール起動.command
.devcontainer/: devcontainer.json
.streamlit/: config.toml
analysis/: forecast.py  pl_summary.py  variance.py  working_capital.py
apps-script/: Code.gs  GeminiAnalysis.gs  appsscript.json
bank-analyzer/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  start-app.bat  tailwind.config.ts
bookkeeping-app/: .gitignore  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
components/: breakeven_section.py  cashflow_section.py  kpi_cards.py  loan_section.py  monthly_trend_section.py  profitability_section.py  sidebar.py  three_period_section.py  yoy_section.py
data/: multipliers_imported.json  sample_budget.csv  sample_ledger.csv
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  OPERATIONS.html  OPERATIONS.md  SETUP.md  TEST_DATA_POLICY.md  add_client_修正案.txt
file-sync-system/: build_entry.py
frontend/: index.html  manifest.json  sw.js
kaikei_tool/: CLAUDE.md  config.py  main.py  requirements.txt  setup.bat  setup.sh
parsers/: comparative_pl_parser.py  trial_balance_parser.py
prisma/: schema.prisma  seed.ts
reports/: excel_generator.py  pdf_generator.py  styles.py
scripts/: cleanup-test-data.ts  create_shortcut.bat  debug_nta_html.py  debug_tohon_pdf.py  download_pdfs.py  estat-import.ts  generate-icon.mjs  import_multiplier_excel.py  mask-sample-data.ts  scrape_ibaraki.py  scrape_ibaraki_ocr.py  start_app.bat  (+1 more)
(+498 files in other folders)
